[package]
name = "flo-state"
version = "0.5.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-task = { git = "https://github.com/wc3tools/flo-task.git" }

tokio = { version = "0.2", features = ["sync", "macros", "rt-threaded"] }
futures = "0.3"
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "0.2", features = ["sync", "macros", "rt-threaded", "time"] }
once_cell = "1.4"